--- a/E_commerce_Data_Analysis.ipynb
+++ b/E_commerce_Data_Analysis.ipynb
@@ -3,10 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "mount_file_id": "1BYfDRdeWpKUft5YcVv6EkLkt8yWB9ihM",
-      "authorship_tag": "ABX9TyPwVoDBY3FnTss138lbqFoV",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Prachiti-Chavan/PrachitiChavan_Project/blob/main/E_commerce_Data_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": 8,
